tests/paczka1/fuzzy1/46185730.err
Error in line 1: a1GTC S58 30,9
Error in line 11: ROwZDWtlk S376 87,1
Error in line 4: bzCUQrGWwqo S82 39,3
Error in line 19: EsfR S58 56,3
Error in line 22: 52l9fzYkl A550 94,9
Error in line 21: EsfR A550 82,9
Error in line 30: ROwZDWtlk S82 17,0
Error in line 33: a1GTC S82 80,7
Error in line 18: bzCUQrGWwqo S376 54,3
Error in line 32: ROwZDWtlk S58 18,3
Error in line 37: ROwZDWtlk A550 59,8
